DuPont DevSB/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Agreement_Process_Start_Date__c</fullName>
        <description>Start Date of Agreement creation / negotiation process for this contract or agreement</description>
        <inlineHelpText>Date the agreement creation / negotiation process begins</inlineHelpText>
        <label>Agreement Process Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Received &amp; Activated</fullName>
                </value>
                <value>
                    <fullName>Sent for Printing</fullName>
                </value>
                <value>
                    <fullName>Sent to Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Sent to Business Mgr</fullName>
                </value>
                <value>
                    <fullName>Sent to Contract Owner-Draft</fullName>
                </value>
                <value>
                    <fullName>Sent to Contract Owner-Final</fullName>
                </value>
                <value>
                    <fullName>Sent to Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Sent to Legal-Draft</fullName>
                </value>
                <value>
                    <fullName>Sent to Legal-Execution</fullName>
                </value>
                <value>
                    <fullName>Signed &amp; Mailed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Sent to Business Manager</fullName>
                </value>
                <value>
                    <fullName>Send for Reviewing</fullName>
                </value>
                <value>
                    <fullName>Sent to Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Send to Product Line Manager</fullName>
                </value>
                <value>
                    <fullName>Sent to PLM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont Aviation Finishes</fullName>
                </value>
                <value>
                    <fullName>Nason</fullName>
                </value>
                <value>
                    <fullName>Spies Hecker</fullName>
                </value>
                <value>
                    <fullName>Standox</fullName>
                </value>
                <value>
                    <fullName>Hot Hues</fullName>
                </value>
                <value>
                    <fullName>DuPont Industrial Coatings</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Corian® Solid Surface</fullName>
                </value>
                <value>
                    <fullName>Montelli</fullName>
                </value>
                <value>
                    <fullName>Corian® Quartz</fullName>
                </value>
                <value>
                    <fullName>Tyvek</fullName>
                </value>
                <value>
                    <fullName>Typar</fullName>
                </value>
                <value>
                    <fullName>Gevity</fullName>
                </value>
                <value>
                    <fullName>Energain</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Isceon®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Suva®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Zyron®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ FM-200®</fullName>
                </value>
                <value>
                    <fullName>DuPont™ FE-25™</fullName>
                </value>
                <value>
                    <fullName>DuPont™ FE-36™</fullName>
                </value>
                <value>
                    <fullName>DuPont™ FE-13™</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® PTFE</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® PTFE Dispersion</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Zonyl® PTFE Micropowder</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® PFA</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® FEP</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Tefzel® ETFE</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® PFA Dispersion</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® FEP Dispersion</fullName>
                </value>
                <value>
                    <fullName>DuPont™ Teflon® Film</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Language__c</fullName>
        <label>Business Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Requested__c</fullName>
        <description>Is a check being requested as part of the contract.</description>
        <inlineHelpText>Is a check being requested as part of the contract?</inlineHelpText>
        <label>Check Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Location__c</fullName>
        <inlineHelpText>Where will the physical contract be stored?</inlineHelpText>
        <label>Contract Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Reference_ID__c</fullName>
        <description>Agreement or Contract reference identifier from other source or system</description>
        <inlineHelpText>Agreement or Contract reference identifier from other source or system</inlineHelpText>
        <label>Contract Reference ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Request_Date__c</fullName>
        <description>Date in which client request Approval to be completed</description>
        <label>Contract Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Targeted Geographical scope of this Contract</description>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-HONGKONG</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>AP-SRI LANKA</fullName>
                </value>
                <value>
                    <fullName>AP-TAIWAN</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Czech Republic</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Greece</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Poland</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Slovakia</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Slovenia</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-Belarus</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-Russian Federation</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-EE-Ukraine</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-SSA-South Africa</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-Bahrain</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-Egypt</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-Israel</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-TMENA-Morocco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HasAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Involved_Org__c</fullName>
        <description>Organisations involved in this Contract</description>
        <label>Involved Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABS</fullName>
                </value>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>All DuPont</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Foam</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Pharmaceutical Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Refrigerants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Vertrel</fullName>
                </value>
                <value>
                    <fullName>DCF FPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Assessment_Date__c</fullName>
        <label>Last Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_AutoNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy Contract Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <description>Comments about the Legal process or or any related comments obtained from the Attorney handling this Contract</description>
        <label>Legal Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Signed_by__c</fullName>
        <label>Legal Entity Signed by</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Approval_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Approval_Status__c)</formula>
        <label>Opportunity Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Opportunity that is associated with this Contract Agreement</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of approval or follow-up by Legal or other entity for this agreement or contract</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>This is the Salesforce Program associated with the Account</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-AP</fullName>
                </value>
                <value>
                    <fullName>BI-EMEA</fullName>
                </value>
                <value>
                    <fullName>BI-LA</fullName>
                </value>
                <value>
                    <fullName>BI-NA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-CHINA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-EAST ASIA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-LA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-NA</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP-NA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-LA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-PH</fullName>
                </value>
                <value>
                    <fullName>DPVS</fullName>
                </value>
                <value>
                    <fullName>IAL</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProrateDamages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies to contract creating for One-Time Allowance damages.</description>
        <label>Prorate Damages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent Contract to this contract</description>
        <label>Related Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Related Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User_Type__c</fullName>
        <label>Related User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This Field Determines the step number of the approval process</description>
        <label>Step Number</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Confidential Disclosure</fullName>
                </value>
                <value>
                    <fullName>Confidentiality</fullName>
                </value>
                <value>
                    <fullName>Consignment Stock</fullName>
                </value>
                <value>
                    <fullName>Consultancy</fullName>
                </value>
                <value>
                    <fullName>Convertor/Toll Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Development / Technology</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Fabricator</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Material Transfer</fullName>
                </value>
                <value>
                    <fullName>Material Transfer / Development</fullName>
                </value>
                <value>
                    <fullName>Material Transfer/Research</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Non-Disclosure (NDA)</fullName>
                </value>
                <value>
                    <fullName>Other Commercial</fullName>
                </value>
                <value>
                    <fullName>Prop Equipment / Technology</fullName>
                </value>
                <value>
                    <fullName>Proprietary Equipment</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Research / Option</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Purchase</fullName>
                </value>
                <value>
                    <fullName>Supply</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Technology / Technology Service</fullName>
                </value>
                <value>
                    <fullName>Technology / Trademark</fullName>
                </value>
                <value>
                    <fullName>Technology Service</fullName>
                </value>
                <value>
                    <fullName>Term Sheet</fullName>
                </value>
                <value>
                    <fullName>Trademark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Date of Termination if agreement is ended prior to the expiration date (may be ended by DuPont or by 3rd Party)</description>
        <inlineHelpText>Date of Termination if agreement is ended prior to the expiration date</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Notice_Period__c</fullName>
        <inlineHelpText>Specify how much notice must be given to terminate unless otherwise provided in this Agreement, e.g., thirty (30) days.</inlineHelpText>
        <label>Termination Notice Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 days</fullName>
                    <default>true</default>
                    <label>30 days</label>
                </value>
                <value>
                    <fullName>60 days</fullName>
                </value>
                <value>
                    <fullName>90 days</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The kind of contract</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party (non-DuPont)</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>Main Agreement</fullName>
                </value>
                <value>
                    <fullName>Non-Disclosure Agreement</fullName>
                </value>
                <value>
                    <fullName>Supplemental Agreement</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>The unit of measure applicable to the contract.</description>
        <inlineHelpText>The unit of measure applicable to the contract.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Square Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fContract_Duration__c</fullName>
        <formula>TEXT(Opportunity__r.Contract_Duration__c)</formula>
        <label>Contract Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fCountry__c</fullName>
        <formula>TEXT(Account.Country__c)</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fNext_Assessment_Date__c</fullName>
        <description>(11/6/2017) - Removed &quot;Assessment_Frequency_in_Months__c&quot; reference as part of remediation effort.</description>
        <formula>Last_Assessment_Date__c +30* NULL</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fOpportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fOpportunity_Owning_Organization__c</fullName>
        <formula>TEXT(Opportunity__r.Owning_Organisation__c)</formula>
        <label>Opportunity Owning Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fOpportunity_Sales_Area__c</fullName>
        <formula>TEXT(Opportunity__r.Sales_Area__c)</formula>
        <label>Opportunity Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fRelated_User_Email__c</fullName>
        <formula>Related_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSector__c</fullName>
        <description>A Sector represents a group of segments or industries within the economy in which a large group of companies may be categorized.

(11/7/2017) - Removed Opportunity.Sector__c reference as part of remediation effort.</description>
        <formula>NULL</formula>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Program__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.STATUS_CODE</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Involved_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Program__c</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Involved_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
</CustomObject>